sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/Approved_Staff_Allowance__c.object-meta.xml
<CustomObject>
    <label>Approved Payroll Modification</label>
    <nameField>
        <displayFormat>APM-{00000000}</displayFormat>
        <label>Approved Payroll Mod Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved Payroll Modifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>