sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Actual_Data_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Data_Amount__c</fullName>
    <label>Actual Data Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>