sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>