sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Allowance_Description__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Description__c</fullName>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>