sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Approval_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Approval_Withdrawn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Withdrawn</label>
    <type>Checkbox</type>
</CustomField>