sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Data_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Data_Mobile_Number__c</fullName>
    <label>Data Mobile Number</label>
    <type>Phone</type>
</CustomField>