sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Sanergy_Department__c</referenceTo>
    <relationshipName>Approved_Staff_Allowances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>