sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>10</length>
    <type>Text</type>
</CustomField>