sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Planned_Voice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Planned_Voice_Amount__c</fullName>
    <label>Planned Voice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>