sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Staff_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Staff_Allowance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payroll Mode</label>
    <referenceTo>Staff_Allowances__c</referenceTo>
    <relationshipName>Approved_Staff_Allowances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>