sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Total_Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowance_Amount__c</fullName>
    <formula>CASE( RecordType.Name, 
&quot;Payroll Addition&quot;,  Allowance_Amount__c, 
&quot;Payroll Deduction&quot;,  Allowance_Amount__c, 
&quot;Phone Allowance&quot;, Actual_Data_Amount__c + Actual_Voice_Amount__c, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>