sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Voice_Mobile_Network__c.field-meta.xml
<CustomField>
    <fullName>Voice_Mobile_Network__c</fullName>
    <label>Voice Mobile Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safaricom</fullName>
            </value>
            <value>
                <fullName>Airtel</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>