sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/fields/Voice_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Voice_Mobile_Number__c</fullName>
    <label>Voice Mobile Number</label>
    <type>Phone</type>
</CustomField>