sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/recordTypes/Payroll_Addition.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Addition</fullName>
    <active>true</active>
    <label>Payroll Addition</label>
</RecordType>