sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/recordTypes/Payroll_Deduction.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Deduction</fullName>
    <active>true</active>
    <label>Payroll Deduction</label>
</RecordType>