sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/recordTypes/Phone_Allowance.recordType-meta.xml
<RecordType>
    <fullName>Phone_Allowance</fullName>
    <active>true</active>
    <label>Phone Allowance</label>
</RecordType>