sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Allowance_Description__c</columns>
    <columns>Total_Allowance_Amount__c</columns>
    <columns>Approved_By__c</columns>
    <columns>Approved_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <group>Directors</group>
        <group>Finance</group>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>