sfSandBoxCode/force-app/main/default/objects/Approved_Staff_Allowance__c/listViews/My_Approved_Allowances.listView-meta.xml
<ListView>
    <fullName>My_Approved_Allowances</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Period__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Allowance_Description__c</columns>
    <columns>Total_Allowance_Amount__c</columns>
    <columns>Approved_By__c</columns>
    <columns>Approved_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Teams Allowances</label>
    <language>en_US</language>
</ListView>